# gxr-climate-game

./: .gitignore  .pre-commit-config.yaml  README.md  SpaceRoom.json  climate_game_en.py  climate_game_f03_en.py  climate_game_pl.py  environment.yaml  pyproject.toml
climate_game/: __init__.py  config.py  cube.py  event.py  game.py  utils.py
png/: combine_plots.typ
scripts/: climate_game_pl.py  play_climate_game.py  plot_game.py  plot_rounds.py  test_climate_game.py
tests/: test_utils.py
